# bird-snake

./: .gitignore  Cargo.toml  Makefile.toml  NOTES.txt  README.md  TODO.txt  butler.env
assets/: water_shader.wgsl
game-grid/: .gitignore  Cargo.toml
game-grid/derive/: Cargo.toml
game-grid/derive-core/: Cargo.toml
game-grid/derive-core/src/: lib.rs
game-grid/derive/src/: lib.rs
game-grid/src/: lib.rs
src/: args.rs  automated_test_pluggin.rs  commands.rs  desktop_main.rs  dev_tools.rs  dev_tools_pluggin.rs  game.rs  game_constants.rs  game_constants_pluggin.rs  level.rs  level_pluggin.rs  level_template.rs  levels.rs  main.rs  menu.rs  movement.rs  movement_pluggin.rs  render_water.rs  snake.rs  snake_pluggin.rs  test_levels.rs  undo.rs  water_mesh.rs  web_main.rs
src/environment/: mod.rs  water.rs
src/gameplay/: camera_plugin.rs  commands.rs  game_constants_pluggin.rs  level_pluggin.rs  mod.rs  movement_pluggin.rs  snake_pluggin.rs  undo.rs
src/level/: level_instance.rs  level_pluggin.rs  level_template.rs  levels.rs  mod.rs  test_levels.rs
src/menus/: main_menu.rs  mod.rs  select_level_menu.rs
src/tools/: automated_test_pluggin.rs  dev_tools_pluggin.rs  mod.rs
web/: index.html
