[package]
name = "snake-bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bevy = "0.9.1"
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui" }
bevy_prototype_debug_lines = "0.9.0"
bevy_tweening = "0.6.0"
game-grid = { path = "game-grid", features = ["bevy-ivec2"] }
thiserror = "1.0.38"
